--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
   ],
   "devDependencies": {
     "semantic-release": "^19.0.2"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
