feat(release): drupal branch added to package.json

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/fcastillo-serempre/frontend-career-paths#readme",
   "release": {
     "branches": [
-      "main"
+      "main",
+      "drupal"
     ]
   },
   "plugins": [
